@@ -88,3 +88,7 @@ Plugin Interface Notes
     - Similarity
     - Randomly
 
+- Export plugin
+    - Export photos to various mediums.
+    - Categorize by album, date, etc.
+
